--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </li>
             </ul>
         </nav>
-        <button onclick="window.location.href = './flights.html'" type="button" aria-label="Get Started">
+        <button onclick="navigate('flights')" id="getStarted" type="button" aria-label="Get Started">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M14 5L21 12M21 12L14 19M21 12H3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
