--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
             <span>Contact</span>
           </a>
         </li>
+        <li>
+          <a href="./booking.html">
+            <span>Booking</span>
+          </a>
+        </li>
       </ul>
     </nav>
     
