--- a/index.html
+++ b/index.html
@@ -3,15 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  
+  <!-- Primary Meta Tags -->
+  <title>BookAir - Book Flights & Hotels | Best Travel Deals</title>
+  <meta name="description" content="BookAir offers the best deals on flights, hotels, and vacation packages. Compare prices, find discounts, and plan your perfect trip with our easy booking platform.">
+  <meta name="keywords" content="flight booking, cheap flights, hotel reservations, travel deals, vacation packages, BookAir">
+  
+  <!-- Open Graph / Facebook Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://codegallantx.github.io/bookair">
+  <meta property="og:title" content="BookAir - Book Flights & Hotels | Best Travel Deals">
+  <meta property="og:description" content="Find the best travel deals on flights, hotels, and vacation packages with BookAir. Compare prices and save on your next trip.">
+  <meta property="og:image" content="https://codegallantx.github.io/bookair/assets/images/bookair-social-share.jpg">
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="BookAir - Book Flights & Hotels | Best Travel Deals">
+  <meta name="twitter:description" content="Find the best travel deals on flights, hotels, and vacation packages with BookAir. Compare prices and save on your next trip.">
+  <meta name="twitter:image" content="https://codegallantx.github.io/bookair/assets/images/bookair-social-share.jpg">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://codegallantx.github.io/bookair">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+  
+  <!-- Preconnect for external resources -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
+  
+  <!-- CSS Libraries -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <!-- <link rel="stylesheet" href="./assets/css/payment.css" /> -->
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="./assets/css/style.css">
+  
+  <!-- Scripts -->
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <title>BookAir</title>
+  
 </head>
 <body>
     <header>
