--- a/index.html
+++ b/index.html
@@ -56,18 +56,13 @@
     <nav>
       <ul>
         <li>
-          <a href="#">
+          <a href="/">
             <span>Home</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="./flights.html">
             <span>Flights</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <span>Services</span>
           </a>
         </li>
         <li>
@@ -76,12 +71,12 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="./check-in.html">
             <span>Check In</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="./contact.html">
             <span>Contact</span>
           </a>
         </li>
@@ -131,13 +126,8 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="./flights.html">
           <span>Flights</span>
-        </a>
-      </li>
-      <li>
-        <a href="#">
-          <span>Services</span>
         </a>
       </li>
       <li>
@@ -146,12 +136,12 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="./check-in.html">
           <span>Check In</span>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="./contact.html">
           <span>Contact</span>
         </a>
       </li>
