--- a/flights.html
+++ b/flights.html
@@ -429,5 +429,6 @@
 
   <script src="./assets/js/api.js"></script>
   <script src="./assets/js/flights.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
