--- a/index.html
+++ b/index.html
@@ -373,9 +373,14 @@
 
       <!-- Tohir Contribution -->
       <section class="flight-offers">
-        <div class="section-header">
-          <p class="tiny">Offer Deal</p>
-          <h3 class="big">Flight Offer Deal</h3>
+        <div class="section-header-more">
+          <div class="section-headings">
+            <p class="tiny">Offer Deal</p>
+            <h3 class="big">Flight Offer Deal</h3>
+          </div>
+          <button class="section-btn">
+            See more
+          </button>
         </div>
         <div class="flight-grid">
           <div class="flight-card">
@@ -387,7 +392,7 @@
               <h5>Lagos To Kano</h5>
               <p class="date">20 Apr 2025 - 25 Apr 2025</p>
               <p class="class">Economy Class</p>
-              <p class="amount">₦150,000</p>
+              <p class="amount">₦250,000</p>
             </div>
           </div>
           <div class="flight-card">
@@ -397,9 +402,9 @@
             />
             <div class="flight-text">
               <h5>Lagos To Abuja</h5>
-              <p class="date">20 Apr 2025 - 25 Apr 2025</p>
+              <p class="date">18 June 2025 - 23 June 2025</p>
               <p class="class">Economy Class</p>
-              <p class="amount">₦100,000</p>
+              <p class="amount">₦400,000</p>
             </div>
           </div>
           <div class="flight-card">
@@ -409,7 +414,7 @@
             />
             <div class="flight-text">
               <h5>Lagos To Sokoto</h5>
-              <p class="date">30 Apr 2025 - 5 May 2025</p>
+              <p class="date">30 June 2025 - 5 July 2025</p>
               <p class="class">Economy Class</p>
               <p class="amount">₦140,000</p>
             </div>
@@ -421,9 +426,9 @@
             />
             <div class="flight-text">
               <h5>Lagos To Delta</h5>
-              <p class="date">25 Apr 2025 - 30 Apr 2025</p>
+              <p class="date">25 July 2025 - 30 July 2025</p>
               <p class="class">Economy Class</p>
-              <p class="amount">₦90,000</p>
+              <p class="amount">₦135,000</p>
             </div>
           </div>
         </div>
