Fix responsiveness issue

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <p class="tiny">Offer Deal</p>
             <h3 class="big">Flight Offer Deal</h3>
           </div>
-          <button class="section-btn">
+          <button onclick="navigate('flights')" class="section-btn">
             See more
           </button>
         </div>
@@ -465,7 +465,7 @@
             <h3>Reserve Your Baggage</h3>
             <ul>
               <li>Secure Your Bags, Enjoy the Ride</li>
-              <li>Rearrange Your Baggade Reservation</li>
+              <li>Rearrange Your Baggage Reservation</li>
               <li>Set Your Allowance Now and Save More</li>
               <li>Save Up to 90% on Baggage Fees</li>
             </ul>
