--- a/booking.html
+++ b/booking.html
@@ -97,7 +97,7 @@
         <nav>
           <ul>
             <li>
-              <a href="/">
+              <a href="./index.html">
                 <span>Home</span>
               </a>
             </li>
@@ -180,7 +180,7 @@
 
         <ul class="mobile-nav">
           <li>
-            <a href="/">
+            <a href="./index.html">
               <span>Home</span>
             </a>
           </li>
