--- a/check-in.html
+++ b/check-in.html
@@ -96,7 +96,7 @@
         <nav>
           <ul>
             <li>
-              <a href="/">
+              <a href="./index.html">
                 <span>Home</span>
               </a>
             </li>
@@ -179,7 +179,7 @@
 
         <ul class="mobile-nav">
           <li>
-            <a href="/">
+            <a href="./index.html">
               <span>Home</span>
             </a>
           </li>
