--- a/flights.html
+++ b/flights.html
@@ -98,7 +98,7 @@
         <nav>
           <ul>
             <li>
-              <a href="/">
+              <a href="./index.html">
                 <span>Home</span>
               </a>
             </li>
@@ -181,7 +181,7 @@
 
         <ul class="mobile-nav">
           <li>
-            <a href="/">
+            <a href="./index.html">
               <span>Home</span>
             </a>
           </li>
