--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <nav>
           <ul>
             <li>
-              <a href="/">
+              <a href="./index.html">
                 <span>Home</span>
               </a>
             </li>
@@ -106,23 +106,18 @@
               </a>
             </li>
             <li>
-              <a href="./payment.html">
-                <span>Payment</span>
-              </a>
-            </li>
-            <li>
               <a href="./check-in.html">
                 <span>Check In</span>
               </a>
             </li>
             <li>
-              <a href="./contact.html">
-                <span>Contact</span>
+              <a href="./booking.html">
+                <span>Booking</span>
               </a>
             </li>
             <li>
-              <a href="./booking.html">
-                <span>Booking</span>
+              <a href="./contact.html">
+                <span>Contact</span>
               </a>
             </li>
           </ul>
