Update file path

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact MhorFlight</title>
-  <link rel="stylesheet" href="contact.css">
+  <link rel="stylesheet" href="./assets/css/contact.css">
 </head>
 <body>
   <div class="contact-container">
