--- a/booking.html
+++ b/booking.html
@@ -91,7 +91,7 @@
     <header>
       <div class="desktop-header">
         <div class="logo">
-          <h1>Book<span>Air</span></h1>
+          <h1>Sky<span>Link</span></h1>
         </div>
 
         <nav>
