--- a/check-in.html
+++ b/check-in.html
@@ -78,7 +78,7 @@
       <div class="desktop-header">
         <div class="logo">
           <a href="/" aria-label="BookAir Home">
-            <h1>Book<span>Air</span></h1>
+            <h1>Sky<span>Link</span></h1>
           </a>
         </div>
 
