--- a/booking-success.html
+++ b/booking-success.html
@@ -319,7 +319,7 @@
               </button>
             </div>
             <div class="share-link">
-              <input type="text" id="shareUrl" value="https://codegallantx.github.io/bookair/booking-success.html" readonly>
+              <input aria-label="share url" type="text" id="shareUrl" value="https://codegallantx.github.io/bookair/booking-success.html" readonly>
               <button aria-label="Copy Link" id="copyLinkBtn">
                 <i class="fas fa-copy"></i>
               </button>
