--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Contact MhorFlight</title>
-  <link rel="stylesheet" href="./assets/css/contact.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <title>BookAir - Book Flights & Hotels | Best Travel Deals</title>
+    <meta
+      name="description"
+      content="BookAir offers the best deals on flights, hotels, and vacation packages. Compare prices, find discounts, and plan your perfect trip with our easy booking platform."
+    />
+    <meta
+      name="keywords"
+      content="flight booking, cheap flights, hotel reservations, travel deals, vacation packages, BookAir"
+    />
+
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://codegallantx.github.io/bookair" />
+    <meta
+      property="og:title"
+      content="BookAir - Book Flights & Hotels | Best Travel Deals"
+    />
+    <meta
+      property="og:description"
+      content="Find the best travel deals on flights, hotels, and vacation packages with BookAir. Compare prices and save on your next trip."
+    />
+    <meta
+      property="og:image"
+      content="https://codegallantx.github.io/bookair/assets/images/bookair-social-share.jpg"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="BookAir - Book Flights & Hotels | Best Travel Deals"
+    />
+    <meta
+      name="twitter:description"
+      content="Find the best travel deals on flights, hotels, and vacation packages with BookAir. Compare prices and save on your next trip."
+    />
+    <meta
+      name="twitter:image"
+      content="https://codegallantx.github.io/bookair/assets/images/bookair-social-share.jpg"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://codegallantx.github.io/bookair" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
+
+    <!-- Preconnect for external resources -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Fonts -->
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap"
+      rel="stylesheet"
+    /> -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- CSS Libraries -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/contact.css">
+    <link rel="stylesheet" href="./assets/css/check-in.css">
+
+    <!-- Scripts -->
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+      ></script>
+  </head>
 </head>
 <body>
+  <header>
+      <div class="desktop-header">
+        <div class="logo">
+          <h1>Sky<span>Link</span></h1>
+        </div>
+
+        <nav>
+          <ul>
+            <li>
+              <a href="./index.html">
+                <span>Home</span>
+              </a>
+            </li>
+            <li>
+              <a href="./flights.html">
+                <span>Flights</span>
+              </a>
+            </li>
+            <li>
+              <a href="./check-in.html">
+                <span>Check In</span>
+              </a>
+            </li>
+            <li>
+              <a href="./booking.html">
+                <span>Booking</span>
+              </a>
+            </li>
+            <li>
+              <a href="./contact.html">
+                <span>Contact</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="header-buttons">
+          <button class="theme-toggle" aria-label="Toggle theme">
+            <i class="fas fa-moon"></i>
+          </button>
+
+          <button
+            class="special-button"
+            onclick="navigate('flights')"
+            id="getStarted"
+            type="button"
+            aria-label="Get Started"
+          >
+            <div class="svg-wrapper-1">
+              <div class="svg-wrapper">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="#FFF"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M3.414 13.778 2 15.192l4.949 2.121 2.122 4.95 1.414-1.414-.707-3.536L13.091 14l3.61 7.704 1.339-1.339-1.19-10.123 2.828-2.829a2 2 0 1 0-2.828-2.828l-2.903 2.903L3.824 6.297 2.559 7.563l7.644 3.67-3.253 3.253-3.536-.708z"
+                  ></path>
+                </svg>
+              </div>
+            </div>
+            <span>Get Started</span>
+          </button>
+
+          <button class="mobile-menu-btn" aria-label="Menu">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+      </div>
+
+      <!-- Mobile Sidebar -->
+      <div class="mobile-sidebar">
+        <div class="sidebar-header">
+          <h3>Menu</h3>
+          <button
+            type="button"
+            aria-label="Close Sidebar"
+            class="close-sidebar"
+          >
+            <i class="fas fa-times"></i>
+          </button>
+        </div>
+
+        <ul class="mobile-nav">
+          <li>
+            <a href="/">
+              <span>Home</span>
+            </a>
+          </li>
+          <li>
+            <a href="./flights.html">
+              <span>Flights</span>
+            </a>
+          </li>
+          <li>
+            <a href="./payment.html">
+              <span>Payment</span>
+            </a>
+          </li>
+          <li>
+            <a href="./check-in.html">
+              <span>Check In</span>
+            </a>
+          </li>
+          <li>
+            <a href="./contact.html">
+              <span>Contact</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="mobile-theme-toggle">
+              <i class="fas fa-moon"></i>
+              <span>Dark Mode</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </header>
   <div class="contact-container">
     <form class="contact-form" action="/submit_contact" method="POST">
       <h2>Contact MhorFlight</h2>
@@ -35,5 +240,49 @@
       </div>
     </form>
   </div>
+  <footer class="main-footer">
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3>BookAir</h3>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Press Center</a></li>
+            <li><a href="#">Travel Agents</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Help</h3>
+          <ul>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Baggage Policy</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Feedback</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Legal</h3>
+          <ul>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Cookie Policy</a></li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Connect With Us</h3>
+          <div class="social-links">
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2023 BookAir. All rights reserved.</p>
+      </div>
+    </footer>
+
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
