--- a/contact.html
+++ b/contact.html
@@ -213,7 +213,7 @@
     </header>
   <div class="contact-container">
     <form class="contact-form" action="/submit_contact" method="POST">
-      <h2>Contact MhorFlight</h2>
+      <h2>Get In Touch</h2>
 
       <div class="form-block">
         <label for="name">Full Name</label>
