--- a/contact.html
+++ b/contact.html
@@ -77,6 +77,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -211,9 +212,9 @@
         </ul>
       </div>
     </header>
-  <div class="contact-container">
-    <form class="contact-form" action="/submit_contact" method="POST">
-      <h2>Get In Touch</h2>
+  <div class="w-full flex flex-row justify-center items-center mt-20">
+    <form class="contact-form w-full md:max-w-lg lg:max-w-2xl mt-10" action="/submit_contact" method="POST">
+      <h2 class="text-4xl font-bold mb-4 ">Get In Touch</h2>
 
       <div class="form-block">
         <label for="name">Full Name</label>
