--- a/index.html
+++ b/index.html
@@ -868,8 +868,8 @@
         <h3>Help</h3>
         <ul>
           <li><a href="#">FAQs</a></li>
-          <li><a href="#">Baggage Policy</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="./luggage.html">Baggage Policy</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
           <li><a href="#">Feedback</a></li>
         </ul>
       </div>
