--- a/flights.html
+++ b/flights.html
@@ -334,7 +334,7 @@
               <label class="checkbox">
                 <input type="checkbox" name="airlines" value="british" checked>
                 <span class="checkmark"></span>
-                <img src="./assets/images/british.png" alt="British Airways" class="airline-logo">
+                <img src="https://www.britishairways.com/nx/b/static/logos/british-airways-colour-negative-dark-colour.svg" alt="British Airways" class="airline-logo">
                 British Airways
               </label>
             </div>
