--- a/contact.html
+++ b/contact.html
@@ -213,7 +213,7 @@
       </div>
     </header>
   <div class="w-full flex flex-row justify-center items-center mt-20">
-    <form class="contact-form w-full md:max-w-lg lg:max-w-2xl mt-10" action="/submit_contact" method="POST">
+    <form target="_blank" action="https://formsubmit.co/a474e9dce50cb8108f1d649a9cbecca2" method="POST" class="contact-form w-full md:max-w-lg lg:max-w-2xl mt-10" action="/submit_contact" method="POST">
       <h2 class="text-4xl font-bold mb-4 ">Get In Touch</h2>
 
       <div class="form-block">
