--- a/payment.html
+++ b/payment.html
@@ -80,6 +80,7 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/toast.css" />
     <link rel="stylesheet" href="./assets/css/payment.css" />
 
     <!-- Scripts -->
