--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>BookAir - Book Flights & Hotels | Best Travel Deals</title>
+    <title>SkyLink - Book Flights & Hotels | Best Travel Deals</title>
     <meta
       name="description"
       content="BookAir offers the best deals on flights, hotels, and vacation packages. Compare prices, find discounts, and plan your perfect trip with our easy booking platform."
