--- a/flights.html
+++ b/flights.html
@@ -4,7 +4,7 @@ Complete this:
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SkyVoyage | Book Flights</title>
+    <title>SkyLink | Book Flights</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         :root {
