--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
             </a>
           </li>
           <li>
-            <a href="./payment.html">
-              <span>Payment</span>
+            <a href="./booking.html">
+              <span>Booking</span>
             </a>
           </li>
           <li>
