--- a/booking.html
+++ b/booking.html
@@ -458,7 +458,7 @@
               <i class="fas fa-user-plus"></i>
               Add Passenger
           </button>
-          <button class="continue-btn" id="continue-btn">
+          <button onclick="window.location.href='./payment.html'" class="continue-btn" id="continue-btn">
               <i class="fas fa-arrow-right"></i>
               Continue to Payment
           </button>
