--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               </a>
             </li>
             <li>
-              <a href="https://skylink-flights.vercel.app/flights">
+              <a href="./flights.html">
                 <span>Flights</span>
               </a>
             </li>
