--- a/flights.html
+++ b/flights.html
@@ -254,11 +254,11 @@
                     </div>
                     <div class="form-group">
                         <label for="departure">Departure</label>
-                        <input type="date" id="departure" value="2023-12-15">
+                        <input type="datetime-local" >
                     </div>
                     <div class="form-group return-date">
                         <label for="return">Return</label>
-                        <input type="date" id="return" value="2023-12-22">
+                        <input type="datetime-local" value="">
                     </div>
                     <div class="form-group passengers">
                         <label for="passengers">Passengers</label>
@@ -345,7 +345,7 @@
                             <label class="checkbox">
                                 <input type="checkbox" name="airlines" value="emirates" checked>
                                 <span class="checkmark"></span>
-                                <img src="./assets/images/emirates.png" alt="Emirates" class="airline-logo">
+                                <img src="https://media.istockphoto.com/id/636198840/photo/emirates-airline-airbus-a380.jpg?s=612x612&w=0&k=20&c=YO25LXFNuW2UtXmH4PJODfOVHmnaMtupHCWseXzI4bY=" alt="Emirates" class="airline-logo-lg">
                                 Emirates
                             </label>
                             <label class="checkbox">
