--- a/flights.html
+++ b/flights.html
@@ -351,7 +351,7 @@
                             <label class="checkbox">
                                 <input type="checkbox" name="airlines" value="ethiopian" checked>
                                 <span class="checkmark"></span>
-                                <img src="./assets/images/ethiopian.png" alt="Ethiopian" class="airline-logo">
+                                <img src="https://media.istockphoto.com/id/1340852874/photo/arkia-embraer-195-airplane-tel-aviv-airport-in-israel.jpg?s=612x612&w=0&k=20&c=ox-7mifydAhGqRxCl5nfCcMvtK5dyO-eY3EHpFy7EHo=" alt="Ethiopian" class="airline-logo">
                                 Ethiopian
                             </label>
                             <label class="checkbox">
@@ -762,7 +762,7 @@
                             <i class="fas fa-suitcase-rolling"></i>
                             <span>${flight.baggage.cabin} cabin + ${flight.baggage.checked} checked bag${flight.baggage.checked > 1 ? 's' : ''}</span>
                         </div>
-                        <button class="select-btn">Select</button>
+                        <button onclick="window.location.href='./booking.html'" class="select-btn">Select</button>
                     </div>
                 `;
                 
